--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Instagram clone with Express + Prisma + React + React Native",
   "scripts": {
-    "dev": "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon --exec npx babel-node src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -16,11 +17,14 @@
   },
   "homepage": "https://github.com/koesnij/prismagram#readme",
   "dependencies": {
-    "babel-cli": "6.26.0",
-    "babel-node": "0.0.1-security",
-    "graphql-yoga": "1.18.3"
+    "dotenv": "^8.2.0",
+    "graphql-yoga": "^1.18.3"
   },
   "devDependencies": {
-    "nodemon": "2.0.4"
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "nodemon": "^2.0.4"
   }
 }
