--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
   "homepage": "https://github.com/koesnij/prismagram#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "graphql-yoga": "^1.18.3"
+    "graphql-yoga": "^1.18.3",
+    "morgan": "1.10.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.10.5",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "graphql-tools": "6.0.18",
+    "merge-graphql-schemas": "1.7.8",
     "nodemon": "^2.0.4"
   }
 }
