--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "nodemon --exec npx babel-node src/server.js",
     "deploy": "prisma1 deploy",
+    "generate": "prisma1 generate",
+    "prisma": "npm run deploy && npm run generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,7 +22,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "prisma-client-lib": "1.34.10"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
