--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
     "morgan": "1.10.0",
+    "nodemailer": "6.4.11",
+    "nodemailer-mailgun-transport": "2.0.0",
     "prisma-client-lib": "1.34.10"
   },
   "devDependencies": {
