--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "morgan": "1.10.0",
     "nodemailer": "6.4.11",
     "nodemailer-mailgun-transport": "2.0.0",
+    "passport": "0.4.1",
+    "passport-jwt": "4.0.0",
     "prisma-client-lib": "1.34.10"
   },
   "devDependencies": {
