--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
+    "jsonwebtoken": "8.5.1",
     "morgan": "1.10.0",
     "nodemailer": "6.4.11",
     "nodemailer-mailgun-transport": "2.0.0",
