--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "8.5.1",
     "morgan": "1.10.0",
+    "multer": "1.4.2",
     "nodemailer": "6.4.11",
     "nodemailer-mailgun-transport": "2.0.0",
     "passport": "0.4.1",
