--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   },
   "homepage": "https://github.com/koesnij/prismagram#readme",
   "dependencies": {
+    "aws-sdk": "2.759.0",
     "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "8.5.1",
     "morgan": "1.10.0",
     "multer": "1.4.2",
+    "multer-s3": "2.9.0",
     "nodemailer": "6.4.11",
     "nodemailer-mailgun-transport": "2.0.0",
     "passport": "0.4.1",
